@@ -1,6 +1,7 @@
 package Mojolicious::Validator;
 use Mojo::Base -base;
 
+use Mojo::Util 'trim';
 use Mojolicious::Validator::Validation;
 
 has checks => sub {
@@ -12,8 +13,10 @@ has checks => sub {
     upload   => sub { !ref $_[2] || !$_[2]->isa('Mojo::Upload') }
   };
 };
+has filters => sub { {trim => \&_trim} };
 
-sub add_check { $_[0]->checks->{$_[1]} = $_[2] and return $_[0] }
+sub add_check  { $_[0]->checks->{$_[1]}  = $_[2] and return $_[0] }
+sub add_filter { $_[0]->filters->{$_[1]} = $_[2] and return $_[0] }
 
 sub validation {
   Mojolicious::Validator::Validation->new(validator => shift);
@@ -36,6 +39,8 @@ sub _size {
   my $len = ref $value ? $value->size : length $value;
   return $len < $min || $len > $max;
 }
+
+sub _trim { trim $_[2] }
 
 1;
 
@@ -94,6 +99,16 @@ between these two values.
 
 Value needs to be a L<Mojo::Upload> object, representing a file upload.
 
+=head1 FILTERS
+
+These filters are available by default.
+
+=head2 trim
+
+  $validation = $validation->filter('trim');
+
+Trim whitespace characters from both ends of string value.
+
 =head1 ATTRIBUTES
 
 L<Mojolicious::Validator> implements the following attributes.
@@ -116,6 +131,12 @@ implements the following new ones.
   $validator = $validator->add_check(size => sub {...});
 
 Register a validation check.
+
+=head2 add_filter
+
+  $validator = $validator->add_filter(trim => sub {...});
+
+Register a new filter.
 
 =head2 validation
 
